# tool-call-finetune-lab

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  service-inquiry.yml
.github/workflows/: ci.yml  github-pages-demo.yml
architecture/: blueprint.json
docs/: BUSINESS_OPERATIONS.md  COMMERCIALIZATION_INDEX.md  DEPLOYMENT_ACTIVATION.md  PAYMENTS_AND_REFUNDS_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REVENUE_READINESS.md  architecture-evidence-map.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  enterprise-readiness.md  evaluation-methodology.md  monetization-playbook.md  openrouter-routing.md  product-operating-model.md  quality-gate.md  revenue-architecture.md  revenue-growth-model.md  reviewer-evidence-map.md  search-growth-implementation.md  service-architecture.md  service-growth-model.md  service-launch-playbook.md  service-offer.json  service-package.md  system-architecture.md  training-log.md
docs/architecture/: blueprint.json
notebooks/kaggle-kernel/: kaggle_full_pipeline.ipynb  kernel-metadata.json
results/: eval_harness_smoke.json  eval_harness_smoke.md  kaggle_public_smoke_bfcl_results.json  public_release_status.json  public_release_status.md
scripts/: build_public_release_artifacts.py  download_base_model.py  full_pipeline.sh  push_to_hub.py  sync_kaggle_kernel.py  validate_repository_surface.py
site/: index.html  llms.txt  robots.txt  service-offer.json  sitemap.xml
src/tool_call_finetune_lab/: __init__.py  config.py
src/tool_call_finetune_lab/data/: __init__.py  format_chat_template.py  merge_and_split.py  prepare_bfcl.py  prepare_glaive.py
src/tool_call_finetune_lab/eval/: __init__.py  bfcl_runner.py  compare.py  stage_pilot_bridge.py
src/tool_call_finetune_lab/quantize/: __init__.py  awq_quantize.py  benchmark_inference.py
src/tool_call_finetune_lab/serve/: __init__.py  openai_compat_test.py  vllm_launcher.py
src/tool_call_finetune_lab/train/: __init__.py  lora_trainer.py  merge_adapter.py
tests/: test_data_pipeline.py  test_eval_runner.py  test_training_config.py
