[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-call-finetune-lab"
version = "0.2.0"
description = "QLoRA fine-tuning for tool-calling reliability, BFCL evaluation, and vLLM serving"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Doeon Kim", email = "ehdjs1351@gmail.com"}]
readme = "README.md"
keywords = ["tool-calling", "function-calling", "lora", "qlora", "fine-tuning", "qwen", "bfcl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "huggingface-hub>=0.26.0",
    "datasets>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/KIM3310/tool-call-finetune-lab"
Repository = "https://github.com/KIM3310/tool-call-finetune-lab"
Issues = "https://github.com/KIM3310/tool-call-finetune-lab/issues"

[project.optional-dependencies]
train = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "wandb>=0.18.0",
]
quantize = [
    "autoawq>=0.2.7",
]
serve = [
    "vllm>=0.6.0",
]
gpu = [
    "tool-call-finetune-lab[train,quantize,serve]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "UP006", "UP035", "UP045", "RUF005", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["tool_call_finetune_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
